--- a/src/pages/components/commonProblems/style.scss
+++ b/src/pages/components/commonProblems/style.scss
@@ -17,13 +17,20 @@
   position: absolute;
   width: 100%;
   height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 4px;
   left: 0;
-  border: 3px dashed;
   bottom: 200px;
 
-}
 
+}
+.common_problems_body {
+  max-width: 1450px;
+  width: 100%;
+  margin: 0 auto;
+}
 .common_problems_title {
   display: flex;
   align-items: center;
@@ -74,35 +81,20 @@
   }
 }
 
-.common_problems_body {
 
-}
+
+//RED ITEMS START
 
 .common_problems_list {
   margin-top: 33px;
 }
+
 
 .common_problems_red_items {
   display: flex;
   flex-wrap: wrap;
   gap: .7%;
 }
-
-.problems_item_sub_text {
-  position: absolute;
-  left: 0;
-  opacity: 0;
-  visibility: hidden;
-  bottom: 0;
-  transition: .3s;
-  padding: 10px;
-
-  p {
-    color: white;
-    text-align: center;
-  }
-}
-
 .common_problems_red_item {
   width: 16%;
   min-height: 255px;
@@ -147,6 +139,7 @@
     transition: .3s;
 
   }
+
 }
 
 .common_problems_red_item_text {
@@ -164,6 +157,26 @@
     max-width: 166px;
   }
 }
+
+
+
+//RED ITEMS END
+
+.problems_item_sub_text {
+  position: absolute;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  bottom: 0;
+  transition: .3s;
+  padding: 10px;
+
+  p {
+    color: white;
+    text-align: center;
+  }
+}
+
 
 .common_problems_list_text_block {
   margin-top: 40px;
