--- a/src/pages/components/consultation/style.scss
+++ b/src/pages/components/consultation/style.scss
@@ -22,7 +22,7 @@
     color: $white;
     font-style: normal;
     font-weight: 400;
-    line-height: 62px; /* 62px */
+    line-height: 72px; /* 62px */
     text-transform: uppercase;
     max-width: 607px;
     flex: 1 1 auto;
@@ -38,7 +38,10 @@
     font-weight: 400;
     line-height: 100%; /* 28px */
     text-transform: uppercase;
+
+
   }
+
 }
 
 .form_title {
@@ -95,7 +98,14 @@
   select{
      width: 30%;
     border-radius: 4px;
-
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url('../../../assets/svgIcons/ArrowDownRight (1).svg'); /* Specify your custom arrow image URL */
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 30px;
+    padding: 10px;
   }
   }
 }
@@ -115,6 +125,13 @@
    margin: 22px 0 0 ;
    padding: 14px 160px;
   border-radius: 4px;
+  color: #191923;
+  text-align: center;
+  font-size: $fontSize22;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 154.3%; /* 33.946px */
+  text-transform: uppercase;
 
 }
 
