--- a/src/pages/components/cooperationWork/style.scss
+++ b/src/pages/components/cooperationWork/style.scss
@@ -49,6 +49,12 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
+  transition: .3s;
+  cursor: pointer;
+
+  &:hover{
+    transform: scale(1.1);
+  }
 
 }
 
@@ -116,6 +122,8 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 4px;
+  transition: .3s;
+  cursor: pointer;
 
 
   p{
@@ -126,6 +134,7 @@
     font-weight: 400;
     line-height: normal;
   }
+
 
 }
 .cooperation_item_text_before{
@@ -151,6 +160,11 @@
     font-weight: 400;
     line-height: 154.3%; /* 33.946px */
     text-transform: uppercase;
+
+    &:hover{
+
+      @include buttonHover
+    }
 
   }
 
