--- a/src/pages/components/partners/style.scss
+++ b/src/pages/components/partners/style.scss
@@ -1,7 +1,8 @@
 @import "src/assets/variables";
 @import "src/assets/@mixin";
 
-.partners_section{
+.partners_section {
+  margin-top: 102px;
 }
 
 .partners_title {
@@ -16,24 +17,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  @include adaptive_fontSize(50px , 50);
+  background-color: white;
+  @include adaptive_fontSize(50px, 50);
   @include adaptive_lineHeight(50px, 50);
   @include h3_title();
 }
 
-.partners_title{
-  h3{
-     position: relative;
-    &::before{
+.partners_title {
+  h3 {
+    position: relative;
+
+    &::before {
       content: '';
       position: absolute;
       width: 0;
       height: 2px;
-      background-color: red;
+      background-color: $red;
       bottom: -10px;
       transition: 3s;
     }
-    &.active::before{
+
+    &.active::before {
       width: 50%;
 
     }
@@ -48,19 +52,21 @@
   font-style: normal;
   font-weight: 400;
   line-height: 27px;
-  margin: 40px 0 0 ;
+  margin: 40px 0 0;
   max-width: 1044px;
+  background-color: white;
 
 
 }
 
+
 .partners_items {
   display: flex;
   align-items: center;
-  justify-content: center;
-   margin: 35px 0 0 ;
+  margin: 35px 0 0;
   flex-wrap: wrap;
   gap: 12px;
+  padding: 0  0 0 20px;
 
 
 }
@@ -71,29 +77,18 @@
   transition: .3s;
   border-radius: 2.198px;
   border: 1.099px solid #191923;
-  //min-width: 130px;
-  //min-height: 150px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 40px;
+  background-color: white;
+  width: 10%;
+  height: 78px;
+
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 0 30px;
+
+  }
 
 }
 
 
-.partners_item:hover .partners_item_bg {
-  opacity: 0;
-
-}
-
-.partners_item span::before {
-  font-size: $fontSize28;
-  color: black;
-  opacity: .7;
-  transition: .3s;
-}
-
-.partners_item:hover span::before {
-  color: blue;
-
-}
