--- a/src/pages/components/telefonSales/style.scss
+++ b/src/pages/components/telefonSales/style.scss
@@ -1,5 +1,39 @@
 @import "src/assets/variables";
 
+
+
+
+.our_telephone_sales_section {
+  background: $backgroundGradient;
+  padding: 10px 0 20px 0;
+  margin-top: 110px;
+  position: relative;
+  z-index: 10;
+
+}
+
+.telephone_middle_border {
+  position: relative;
+  min-height: 110px;
+
+  &::before {
+    position: absolute;
+    content: '';
+    width: 2px;
+    height: 0;
+    background-color: black;
+    transition: 3s;
+    left: 50.4%;
+
+
+  }
+
+  &.active {
+    &::before {
+      height: 100%;
+    }
+  }
+}
 .our_telephone_sales_content {
 
 
@@ -10,6 +44,7 @@
     font-size: calc($fontSize20 + 34 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
+
     line-height: calc(20px + 65 * (100vw / 1920));
 
     text-transform: uppercase;
