--- a/src/pages/components/testimonials/style.scss
+++ b/src/pages/components/testimonials/style.scss
@@ -7,7 +7,26 @@
 
 }
 
+.testimonials_logo_block{
+ margin-top: 20px;
+}
+.testimonials_logo_block{
+  position: absolute;
+  left: -100px;
+  top: 0;
+  background-color: white;
 
+  img{
+      width: 60%;
+    height: 60%;
+    object-fit: cover;
+    animation: logo 4s infinite linear;
+
+  }
+}
+.testimonials_rotate_logo{
+
+}
 .testimonials_body {
   position: relative;
   display: flex;
@@ -15,19 +34,33 @@
   flex-direction: column;
   justify-content: center;
 
-  .arrow_right {
+  .arrow-right {
     right: 0;
     position: absolute;
     margin-top: 62px;
     font-size: $fontSize33;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    bottom: 210px;
 
+
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+
+    }
   }
 
-  .arrow_left {
+  .arrow-left {
     left: 0;
     position: absolute;
     font-size: $fontSize33;
     margin-top: 62px;
+    cursor: pointer;
+    bottom: 210px;
 
   }
 
@@ -35,14 +68,15 @@
     position: absolute;
     content: '';
     width: 0;
-    height: 2px;
+    height: 1px;
     background-color: $black;
     transition: 3s;
     top: 0;
 
   }
-  &.active{
-    &::before{
+
+  &.active {
+    &::before {
       width: 100%;
 
     }
@@ -95,77 +129,24 @@
   }
 }
 
-.testimonials_clients {
+.testimonials_clients_slider {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
   margin-top: 62px;
 
 }
 
 
-.testimonials_clients_red_block {
-  min-width: 582px;
-  min-height: 153.261px;
-  background-color: $red;
-  border-radius: 4px;
-
-}
-
-.testimonials_clients_white_block {
+.testimonials_slider_item {
   min-width: 582px;
   min-height: 153.261px;
   border-radius: 4px;
-
-}
-
-.testimonials_clients_red_block {
-  display: flex;
-  align-items: center;
-  padding: 30px;
-  gap: 30px;
-
-
-}
-
-.testimonials_clients_white_block {
+  cursor: pointer;
+  transition: .3s;
   display: flex;
   padding: 30px;
   align-items: center;
-
   gap: 30px;
 
-
-}
-
-.testimonials_clients_red_block_text {
-  max-width: 334px;
-
-  p {
-    margin: 30px 0 0;
-    color: #FFF;
-    font-size: 26px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 100%; /* 26px */
-  }
-
-  h3 {
-    color: white;
-    font-size: $fontSize24;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 37px;
-    text-transform: uppercase;
-
-  }
-
-}
-
-.testimonials_clients_white_block_text {
-  max-width: 334px;
 
   p {
     margin: 30px 0 0;
@@ -175,6 +156,8 @@
     font-style: italic;
     font-weight: 400;
     line-height: 100%; /* 26px */
+    max-width: 334px;
+
 
   }
 
@@ -185,9 +168,36 @@
     font-weight: 400;
     line-height: 37px;
     text-transform: uppercase;
+    max-width: 334px;
+
+  }
+
+  &:hover {
+    background-color: $red;
+
+    p {
+      margin: 30px 0 0;
+      color: #FFF;
+      font-size: 26px;
+      font-style: italic;
+      font-weight: 400;
+      line-height: 100%;
+    }
+
+    h3 {
+      color: white;
+      font-size: $fontSize24;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 37px;
+      text-transform: uppercase;
+
+    }
+
   }
 
 }
+
 
 .testimonials_more_btn {
   margin-top: 60px;
@@ -208,12 +218,18 @@
     font-style: normal;
     font-weight: 400;
     line-height: 154.3%; /* 33.946px */
-    background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
+    background: $backgroundGradient;
+
+    &:hover{
+      @include buttonHover
+
+    }
   }
-  &::after{
+
+  &::after {
     position: absolute;
     content: '';
-    width: 2px;
+    width: 1px;
     height: 0;
     background-color: $black;
     transition: 3s;
@@ -221,8 +237,16 @@
     left: 20%;
   }
 
-  &.active::after{
+  &.active::after {
     height: 225px;
 
+  }
+}
+
+.testimonials_clients_slider {
+
+  @media screen and (max-width: 1500px){
+    max-width: 1000px;
+    margin: 0 auto;
   }
 }
