--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -2,27 +2,53 @@
 @import "src/assets/@mixin";
 
 
-.section_telephone_sales_content {
-  margin: 150px 0 0;
+.svg_line_block{
+   margin-left: 40px;
+   position: absolute;
+  left: 0;
+  top: 0;
+   margin-top: 200px;
+}
 
+.section_telephone_sales {
+  margin-top: 152px;
+  position: relative;
+
+}
+
+.section_telephone_sales_content {
+  position: relative;
   &::before {
     content: '';
     position: absolute;
     right: 0;
-    top: 0;
+    top: 100px;
     width: 0;
-    height: 2px;
+    height: 1px;
     background-color: $black;
     transition: 3s;
   }
 
   &.active::before {
     width: 20%;
+  }
 
+  &::after {
+    content: '';
+    position: absolute;
+    top: 120px;
+    right: 130px;
+    width: 1px;
+    height: 100px;
+    background-color: $black;
+    transition: 3s;
   }
 
 }
+.telephone_sales_body {
+  position: relative;
 
+}
 
 .telephone_sales_content {
   display: flex;
@@ -30,45 +56,22 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 120px 0 0;
+  padding: 142px 0 0;
 
 
-
-
-}
-
-.telephone_sales_body {
-  position: relative;
-
-  &::before {
-    position: absolute;
-    content: '';
-    width: 2px;
-    height: 0;
-    background-color: black;
-    right: 0;
-    top: 30px;
-    transition: 3s;
-  }
-
-  &.active::before {
-    height: 30%;
-
-  }
 }
 
 .telephone_sales_text {
   padding: 30px 0 0 0;
   position: relative;
 
-  h3 {
-    font-size: calc($fontSize28 + 72 * (100vw / 1920));
+  h1 {
+    font-size: calc($fontSize20 + 80 * (100vw / 1920));
     max-width: 624px;
     color: $black;
     font-style: normal;
     font-weight: 400;
     line-height: calc($fontSize24 + 76 * (100vw / 1920));
-    @include adaptive_fontSize($fontSize28, 70);
     text-transform: uppercase;
   }
 
@@ -98,14 +101,19 @@
     margin: 60px 0 0;
     @media screen and (max-width: 1494px) {
       margin: calc(20px + (60 - 20) * ((100vw - 320px) / (1494 - 320))) 0 0;
+
     }
 
+    &:hover {
+      @include buttonHover
+    }
   }
 
   @media screen and (max-width: 1494px) {
     padding-top: calc(20px + (42 - 20) * ((100vw - 320px) / (1494 - 320)));
 
   }
+
 }
 
 .telephone_sales_img {
@@ -117,116 +125,14 @@
   }
 }
 
-.left_border_block_long {
-  position: absolute;
-  height: 0;
-  width: 2px;
-  left: 20px;
-  top: 0;
-  background-color: black;
-  transition: 3s;
-
-  &.active {
-    height: 100%;
-
-  }
-}
-
-.left_border_block {
-  position: absolute;
-  height: 0;
-  width: 2px;
-  left: 20px;
-  top: 0;
-  background-color: black;
-  transition: 3s;
-
-  &.active {
-    height: 100%;
-
-  }
-}
-
-
-.rotate_logo_block {
-  min-height: 100px;
-
-}
-
-.rotate_logo {
-  position: absolute;
-  right: -100px;
-  top: 0;
-  animation: logo 2s infinite linear;
-
-
-}
-
-.border_top_block {
-  position: absolute;
-  height: 1px;
-  width: 0;
-  left: 20px;
-  bottom: 0;
-  background-color: $black;
-  transition: 3s;
-
-  &.active {
-    width: 80%;
-
-  }
-}
-
-@keyframes logo {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-
-  }
-
-}
-
-
-.our_telephone_sales_section {
-  background: $backgroundGradient;
-  padding: 10px 0 20px 0;
-
-}
-
-.telephone_middle_border {
-  position: relative;
-  min-height: 110px;
-
-  &::before {
-    position: absolute;
-    content: '';
-    width: 2px;
-    height: 0;
-    background-color: black;
-    transition: 3s;
-    left: 50.4%;
-
-
-  }
-
-  &.active {
-    &::before {
-      height: 100%;
-    }
-  }
-}
 
 
 
 ․home_ellipse_large {
   max-width: 140px;
   max-height: 140px;
-  background-color: red;
   width: 100%;
   height: 100%;
-
 
 }
 
@@ -250,7 +156,7 @@
   &::before {
     position: absolute;
     content: '';
-    width: 2px;
+    width: 1px;
     height: 0;
     background-color: $black;
     top: 0;
@@ -263,7 +169,7 @@
     position: absolute;
     content: '';
     width: 0;
-    height: 2px;
+    height: 1px;
     right: 400px;
     background-color: $black;
     bottom: 0;
@@ -271,10 +177,11 @@
   }
 
   &.active {
-    &::after{
-       width: 200px;
+    &::after {
+      width: 200px;
     }
-    &::before{
+
+    &::before {
       height: 120px;
 
 
@@ -288,59 +195,91 @@
   justify-content: center;
   width: 150px;
   height: 150px;
-  border: 2px solid rgba(185, 18, 84, 0.10);
   border-radius: 50%;
+  background-color: white;
+  transition: .3s;
+  position: relative;
+  animation: pulse 2s infinite;
 
 }
 
 .home_ellipse_medium {
   width: 70%;
   height: 70%;
-  border: 2px solid rgba(185, 18, 84, 0.10);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  animation: pulse 2s infinite;
+
 }
 
 .home_ellipse_small {
   width: 70%;
   height: 70%;
-  border: 2px solid rgba(185, 18, 84, 0.10);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: pulse 2s infinite;
+
 }
-.line_left_border_block{
-   position: absolute;
 
-  svg{
-    position: absolute;
-    left: 0;
-    top: 150px;
+@keyframes pulse {
+  0% {
+    border: 1px solid rgba(185, 18, 84, 0.10);
+    box-shadow: 0 0 50px rgba(185, 18, 84, 0.10); /* Start shadow properties */
+    transition: .3s;
 
-   line{
-     transform: rotate(45deg);
-   }
+  }
+  50% {
+    border: 1px solid rgba(185, 18, 84, 0.10);
+    box-shadow: 0 0 15px rgba(185, 18, 84, 0.10);
+
+
+  }
+  100% {
+    border: 1px solid rgba(185, 18, 84, 0.10);
+    box-shadow: 0 0 5px rgba(185, 18, 84, 0.10)
+
   }
 }
-.line_top_border_block{
-   position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
-  z-index: -2;
 
-  svg{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 
-    line{
-    }
-  }
+.rotate_logo_block {
+  min-height: 100px;
+
 }
+
+.rotate_logo {
+  position: absolute;
+  right: -200px;
+  top: 0;
+  background-color: white;
+  img{
+    width: 60%;
+    height: 60%;
+    object-fit: cover;
+    animation: logo 4s infinite linear;
+
+  }
+
+}
+
+
+
+@keyframes logo {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+
+  }
+
+}
+
 
 
 
