--- a/src/pages/components/consultation/style.scss
+++ b/src/pages/components/consultation/style.scss
@@ -112,7 +112,6 @@
 .remember_me{
    display: flex;
   gap: 10px;
-
   margin-top: 10px;
   color: #FFF;
   font-family: Commissioner;
@@ -120,7 +119,28 @@
   font-style: normal;
   font-weight: 400;
   line-height: 154.3%;
+  input[type="checkbox"] {
+    display: none;
+  }
+label{
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 1px solid white;
+
+  &::before{
+     width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: black;
+  }
+
 }
+}
+
+
 .form_contact_button{
    margin: 22px 0 0 ;
    padding: 14px 160px;
