--- a/src/pages/components/ourServices/style.scss
+++ b/src/pages/components/ourServices/style.scss
@@ -121,19 +121,25 @@
   opacity: .3;
   background-color: #191923;;
   transition: .3s;
+  //background: var(--hover, linear-gradient(180deg,   #8D1038 0%, #8D103800 100%));
 
 }
 .content_image_body {
   position: relative;
   cursor: pointer;
   transition: .3s;
-
+  width: 100%;
+  height: 100%;
 
   &:hover {
     .content_item_img_bg {
       opacity: 0;
 
     }
+  }
+  img{
+     width: 100%;
+    height: 100%;
   }
 }
 
