--- a/src/pages/components/testimonials/style.scss
+++ b/src/pages/components/testimonials/style.scss
@@ -12,13 +12,13 @@
 }
 .testimonials_logo_block{
   position: absolute;
-  left: -100px;
+  left: -70px;
   top: 0;
   background-color: white;
 
   img{
-      width: 60%;
-    height: 60%;
+      width: 70%;
+    height: 70%;
     object-fit: cover;
     animation: logo 4s infinite linear;
 
@@ -107,7 +107,7 @@
       position: absolute;
       width: 50%;
       height: 1px;
-      background-color: red;
+      background-color: $red;
       bottom: -10px;
       display: block;
     }
@@ -146,6 +146,7 @@
   padding: 30px;
   align-items: center;
   gap: 30px;
+  border: 1px solid ;
 
 
   p {
