--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -2,8 +2,13 @@ $black: #191923;
 $white:#FFF;
 $red:#8D1038;
 $backgroundGradient: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
+$white1:#FFF0F0;
 
-
+//Breakpoints
+$md1:1329;
+$md2:991.98;
+$md3:767.98;
+$md4:479.98;
 
 
 $fontSizeSidebarIcons:20px;
@@ -21,4 +26,5 @@ $fontSize54:54px;
 $fontSize22:22px;
 $fontSize33:33px;
 $fontSize60:60px;
-$fontSize26:26px
+$fontSize26:26px;
+$fontSize90:90px;
